--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,17 @@
-<div class="page-header">
-  <h1>AngelList Cologne!</h1>
-  <p>All you wanna know about cologne</p>
-</div>
-
 <div class="span12">
-  <ul class="thumbnails">
-    <li class="span4" ng-repeat="entry in search | filter:{type:'User'}">
+  <div ng-show="loggedIn==false">
+    <img src="http://upload.wikimedia.org/wikipedia/commons/2/2e/K%C3%B6ln_Panorama.jpg"/>
+    <p><small>© Raimond Spekking / CC-BY-SA-3.0 (via Wikimedia Commons) [<a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a> or <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a>], <a href="http://commons.wikimedia.org/wiki/File%3AK%C3%B6ln_Panorama.jpg">via Wikimedia Commons</a></small></p>
+  </div>
+  <ul class="thumbnails" ng-show="loading==false">
+    <li class="span4" ng-repeat="entry in (filteredEntries = (search | filter:{type:'User'}))">
       <a href="{{entry.url}}">
         <img ng-src="{{entry.pic}}"/>
-        <h3>{{entry.name}}</h3>
+        <h3 title="{{entry}}">{{entry.name}}</h3>
       </a>
     </li>
-    <li ng-show="!search.length">No entries</li>
+    <li ng-show="!filteredEntries.length">
+      No entries found! Please stay calm. We got notified and a drone is already on its way to your house.
+    </li>
   </ul>
 </div>
