--- a/app/views/jobs.html
+++ b/app/views/jobs.html
@@ -3,19 +3,20 @@
     <li ng-repeat="entry in (filteredEntries = (jobs | orderBy:'updated_at':true))">
       <a href="{{entry.angellist_url}}">
         <h3>{{entry.title}} - {{entry.startup.name}}</h3>
-      </a>
-      <p>Skills:</p>
-      <ul>
-        <li ng-repeat="tag in entry.tags | filter:{tag_type:'SkillTag'}">{{tag.display_name}}</li>
-      </ul>
+      </a> 
+      <p>{{entry.startup.product_desc}}</p>
       <p>
+        Skills:
+        <ul>
+          <li ng-repeat="tag in entry.tags | filter:{tag_type:'SkillTag'}">{{tag.display_name}}</li>
+        </ul>
         Location:
         <span ng-repeat="tag in entry.tags | filter:{tag_type:'LocationTag'}">{{tag.display_name}}</span>
-      </p>
-      <p>
+        <br>
         Role:
         <span ng-repeat="tag in entry.tags | filter:{tag_type:'RoleTag'}">{{tag.display_name}}</span>
       </p>
+      <small>Created: {{entry.created_at | date:'dd.MM.yyyy'}}</small>
     </li>
     <li ng-show="!filteredEntries.length">
       No entries found! Please stay calm. We got notified and a drone is already on its way to your house.
