--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,8 +3,9 @@
     <img src="http://upload.wikimedia.org/wikipedia/commons/2/2e/K%C3%B6ln_Panorama.jpg"/>
     <p><small>© Raimond Spekking / CC-BY-SA-3.0 (via Wikimedia Commons) [<a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a> or <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a>], <a href="http://commons.wikimedia.org/wiki/File%3AK%C3%B6ln_Panorama.jpg">via Wikimedia Commons</a></small></p>
   </div>
+  <pagination></pagination>
   <ul ng-show="loading==false">
-    <li ng-repeat="entry in (filteredEntries = (startups | orderBy:'follower_count':true | filter:{hidden:'false'}))">
+    <li ng-repeat="entry in (filteredEntries = (startups.startups | orderBy:'follower_count':true | filter:{hidden:'false'}))">
       <a href="{{entry.company_url}}">
         <h3>{{entry.name}}</h3>
       </a>
@@ -15,4 +16,5 @@
       No entries found! Please stay calm. We got notified and a drone is already on its way to your house.
     </li>
   </ul>
+  <pagination></pagination>
 </div>
