--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,3 +60,11 @@ a.brand {
 .btn-angellist:before {
     margin: 0 0.6em 0 -0.6em;
 }
+[class*="span"] {
+  margin-left: 0;
+}
+ul.main-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
