--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,45 @@
 @import "bootstrap-sass/lib/bootstrap";
 
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   padding-top: 60px; /* When using the navbar-top-fixed */
+}
+.media {
+  img {
+    border: 1px solid #CCC;
+    width: 100px;
+    height: 100px;
+  }
+  div.box {
+    @extend .pull-left;
+    border: 1px solid #CCC;
+    width: 100px;
+    height: 60px;
+    font-family: 'IM Fell English SC', serif;
+    margin-right: 10px;
+    text-align: center;
+    padding-top: 40px;
+    font-size: 32px;
+  }
+  .media-body {
+    padding-right: 10px;
+  }
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+.header {
+  img {
+    margin-right: 30px;
+    margin-bottom: 10px;
+  }
+  div {
+    padding-top: 25px;
+  }
+  h2 {
+    font-family: 'IM Fell English SC', serif;
+    font-size: 64px;
+  }
+  margin-bottom: 20px;
 }
 
 a.brand {
