--- a/app/views/main.html
+++ b/app/views/main.html
@@ -43,6 +43,9 @@
       </div>
     </div>
   </li>
+  <li ng-show="!filteredEntries.length">
+    No entries found! Please stay calm. We got notified and a drone is already on its way to your house.
+  </li>
 </ul>
 <div class="span4">
   <a class="twitter-timeline" href="https://twitter.com/ThePiratesInn" data-widget-id="369795207547473920">Tweets by @ThePiratesInn</a>
