added imprint and twitter search for eps13

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,6 +42,10 @@ body {
   margin-bottom: 20px;
 }
 
+footer {
+  margin: 15px 0;
+}
+
 a.brand {
   font-family: 'Julius Sans One', sans-serif;
 }
