--- a/app/views/main.html
+++ b/app/views/main.html
@@ -48,5 +48,5 @@
   </li>
 </ul>
 <div class="span4">
-  <a class="twitter-timeline" href="https://twitter.com/ThePiratesInn" data-widget-id="369795207547473920">Tweets by @ThePiratesInn</a>
+  <a class="twitter-timeline" href="https://twitter.com/search?q=%23eps13" data-widget-id="369836370434338817">Tweets about "#eps13"</a>
 </div>
