added loading directive to indicate loading/errors

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,10 @@ body {
   margin-top: 0px;
   margin-bottom: 15px;
 }
+.loader {
+  height: 100px;
+  padding-top: 30px;
+}
 .header {
   img {
     margin-right: 30px;
